new: Upgraded chunk management and buffer arena CaffeineMC/sodium-fabric 696da3c219b0d21febdea9dd73e07516f694248a